Add buttons and sidebar

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="img">
                     <img src="images/profile.jpeg" alt="">
                 </div>
-                <div class="Name">Diana Palafox</div>
+                <div class="name">Diana Palafox</div>
             </div>
             <div class="photo">
                 <div class="profile-pic">
@@ -37,12 +37,28 @@
                 </div>
             </div>
             <div class="buttons">
-                <button class="new">New</button>
-                <button class="upload">Upload</button>
-                <button class="share">Share</button>
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
             </div>
         </div>
-        <div class="sidebar"></div>
+        <div class="sidebar">
+            <h1>Dashboard</h1>
+            <li>
+                <ul>Home</ul>
+                <ul>Profile</ul>
+                <ul>Messages</ul>
+                <ul>History</ul>
+                <ul>Tasks</ul>
+                <ul>Communities</ul>
+            </li>
+            <li>
+                <ul>Settings</ul>
+                <ul>Support</ul>
+                <ul>Privacy</ul>
+            </li>
+
+        </div>
         <div class="wrapper">
             <div class="card"></div>
             <div class="card"></div>
