Add design to the announcements and trending navs

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     <img src="images/profile.jpeg" alt="">
                 </div>
                 <div class="greeting">
-                    <p> Hi there,</p>
-                    <p>Diana Palafox (@diana)</p>
+                    <p class="greeting-one"> Hi there,</p>
+                    <p class="greeting-two">Diana Palafox (@diana)</p>
                 </div>
             </div>
             <div class="buttons">
@@ -110,34 +110,86 @@
 
         </div>
         <div class="wrapper">
-            <h2>Your Projects</h2>
-            <div class="card">
-                <h6>Super Cool Project</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum expedita sapiente eaque, non cumque incidunt, vero fugiat sit ratione voluptatum adipisci libero commodi assumenda. Necessitatibus nisi dolorem dolores illo enim.</p>
+            <div class="cards">
+                <h2>Your Projects</h2>
+                <div class="card">
+                    <p class="title">Super Cool Project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum expedita sapiente eaque, non cumque incidunt, vero fugiat sit ratione voluptatum adipisci libero commodi assumenda. Necessitatibus nisi dolorem dolores illo enim.</p>
+                </div>
+                <div class="card">
+                    <p class="title">Less Cool Project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum expedita sapiente eaque, non cumque incidunt, vero fugiat sit ratione voluptatum adipisci libero commodi assumenda. Necessitatibus nisi dolorem dolores illo enim.</p>
+                </div>
+                <div class="card">
+                    <p class="title">Imposible App</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum expedita sapiente eaque, non cumque incidunt, vero fugiat sit ratione voluptatum adipisci libero commodi assumenda. Necessitatibus nisi dolorem dolores illo enim.</p>
+                </div>
+                <div class="card">
+                    <p class="title">Easy Peasy App</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum expedita sapiente eaque, non cumque incidunt, vero fugiat sit ratione voluptatum adipisci libero commodi assumenda. Necessitatibus nisi dolorem dolores illo enim.</p>
+                </div>
+                <div class="card">
+                    <p class="title">Add Blocker</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum expedita sapiente eaque, non cumque incidunt, vero fugiat sit ratione voluptatum adipisci libero commodi assumenda. Necessitatibus nisi dolorem dolores illo enim.</p>
+                </div>
+                <div class="card">
+                    <p class="title">Money Maker</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum expedita sapiente eaque, non cumque incidunt, vero fugiat sit ratione voluptatum adipisci libero commodi assumenda. Necessitatibus nisi dolorem dolores illo enim.</p>
+                </div>
             </div>
-            <div class="card">
-                <h6>Less Cool Project</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum expedita sapiente eaque, non cumque incidunt, vero fugiat sit ratione voluptatum adipisci libero commodi assumenda. Necessitatibus nisi dolorem dolores illo enim.</p>
-            </div>
-            <div class="card">
-                <h6>Imposible App</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum expedita sapiente eaque, non cumque incidunt, vero fugiat sit ratione voluptatum adipisci libero commodi assumenda. Necessitatibus nisi dolorem dolores illo enim.</p>
-            </div>
-            <div class="card">
-                <h6>Easy Peasy App</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum expedita sapiente eaque, non cumque incidunt, vero fugiat sit ratione voluptatum adipisci libero commodi assumenda. Necessitatibus nisi dolorem dolores illo enim.</p>
-            </div>
-            <div class="card">
-                <h6>Add Blocker</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum expedita sapiente eaque, non cumque incidunt, vero fugiat sit ratione voluptatum adipisci libero commodi assumenda. Necessitatibus nisi dolorem dolores illo enim.</p>
-            </div>
-            <div class="card">
-                <h6>Money Maker</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum expedita sapiente eaque, non cumque incidunt, vero fugiat sit ratione voluptatum adipisci libero commodi assumenda. Necessitatibus nisi dolorem dolores illo enim.</p>
+        <div class="right">
+                <h2>Announcements</h2>
+                <div class="box">
+                    <div class="text">
+                        <h5>Site Maintenance</h5>
+                        <p>Egestas egestas fringilla phasellus faucibus scelerisque. Non nisi est sit amet. At lectus urna duis convallis. </p>
+                        <hr/>
+                    </div>
+                    <div class="text">
+                        <h5>Community Share Day</h5>
+                        <p>Erat velit scelerisque in dictum non consectetur a. Enim lobortis scelerisque fermentum dui faucibus in.</p>
+                        <hr/>
+                    </div>
+                    <div class="text">
+                        <h5>Updated Privacy Policy</h5>
+                        <p>Sed viverra ipsum nunc aliquet bibendum enim facilisis gravida. Porttitor massa id neque aliquam vestibulum.</p>
+                    </div>
+                </div>
+            <div class="trending">
+                <h2>Trending</h2>
+                <div class="box-two">
+                    <div class="perfiles">
+                        <img src="images/girl-1.jpg" alt="">
+                        <div class="content">
+                            <p class="tag">@tegan</p>
+                            <p class="description">World Peace Builder</p>
+                        </div>
+                    </div>
+                    <div class="perfiles">
+                        <img src="images/girl-2.jpg" alt="">
+                        <div class="content">
+                        <p class="tag">@morgan</p>
+                        <p class="description">Super Cool Project</p>
+                        </div>
+                    </div>
+                    <div class="perfiles">
+                        <img src="images/girl-3.jpg" alt="">
+                        <div class="content">
+                        <p class="tag">@kendall</p>
+                        <p class="description">Life Changing App</p>
+                        </div>
+                    </div>
+                    <div class="perfiles">
+                        <img src="images/girl-4.jpg" alt="">
+                        <div class="content">
+                        <p class="tag">@alex</p>
+                        <p class="description">No Traffic Maker</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="announcements"></div>
-        <div class="trending"></div>
+        </div>
     </div>
 </body>
 </html>
